--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build": "yarn build:endpoint-graphql && yarn build:app-desktop",
     "build:endpoint-graphql": "cargo build -p endpoint-graphql --bin endpoint-graphql --release",
     "build:app-desktop": "yarn workspace @white-rabbit/app-desktop run build",
+    "build:app-desktop:vue": "yarn workspace @white-rabbit/app-desktop run build:vue",
     "test": "cargo test",
     "lint": "cargo fmt --check && cargo clippy",
     "lint:fix": "cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
