--- a/packages/backend-shared/Cargo.toml
+++ b/packages/backend-shared/Cargo.toml
@@ -9,11 +9,14 @@ edition = "2021"
 futures = "0.3.24"
 log = "0.4.17"
 env_logger = "0.9.0"
-anyhow = "1.0.62"
+anyhow = "1.0.63"
 tokio = { version = "1.20.1", features = ["rt", "macros"] }
 sea-orm = { version = "0.9.2", features = [ "macros" ] }
 serde = "1.0.144"
 serde_json = "1.0.85"
+chrono = "0.4.22"
+rust_decimal = "1.26"
+rust_decimal_macros = "1.26"
 
 [dev-dependencies]
 sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
