--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,5 @@ members = [
     "packages/backend-shared",
     "packages/app-desktop/src-tauri",
     "packages/endpoint-graphql",
+    "packages/migration",
 ]
