--- a/packages/backend-shared/Cargo.toml
+++ b/packages/backend-shared/Cargo.toml
@@ -20,3 +20,4 @@ rust_decimal_macros = "1.26"
 
 [dev-dependencies]
 sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+migration = { path = "../migration" }
