--- a/packages/backend-shared/Cargo.toml
+++ b/packages/backend-shared/Cargo.toml
@@ -12,11 +12,12 @@ env_logger = "0.9.0"
 anyhow = "1.0.63"
 tokio = { version = "1.20.1", features = ["rt", "macros"] }
 sea-orm = { version = "0.9.2", features = [ "macros" ] }
-serde = "1.0.144"
+serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
-chrono = "0.4.22"
-rust_decimal = "1.26"
-rust_decimal_macros = "1.26"
+chrono = { version = "0.4.22", features = [ "serde" ] }
+rust_decimal = "1.26.1"
+rust_decimal_macros = "1.26.1"
+async-trait = "0.1.57"
 
 [dev-dependencies]
 sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
