--- a/packages/migration/Cargo.toml
+++ b/packages/migration/Cargo.toml
@@ -13,5 +13,5 @@ backend-shared = { path = "../backend-shared" }
 tokio = { version = "1.20.1", features = ["rt", "macros"] }
 
 [dependencies.sea-orm-migration]
-version = "^0.9.0"
+version = "0.9.2"
 features = ["sqlx-sqlite", "runtime-tokio-rustls"]
