--- a/packages/backend-shared/Cargo.toml
+++ b/packages/backend-shared/Cargo.toml
@@ -10,7 +10,7 @@ futures = "0.3.24"
 log = "0.4.17"
 env_logger = "0.9.0"
 anyhow = "1.0.63"
-tokio = { version = "1.20.1", features = ["rt", "macros"] }
+tokio = { version = "1.21.0", features = ["rt", "macros"] }
 sea-orm = { version = "0.9.2", features = [ "macros" ] }
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
@@ -18,6 +18,7 @@ chrono = { version = "0.4.22", features = [ "serde" ] }
 rust_decimal = "1.26.1"
 rust_decimal_macros = "1.26.1"
 async-trait = "0.1.57"
+base64 = "0.13.0"
 
 [dev-dependencies]
 sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
