--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [ macos-latest, ubuntu-latest, windows-latest ]
+        platform: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v3
         name: Checkout repository
@@ -16,18 +16,29 @@ jobs:
         name: Setup Node
         with:
           node-version: 18
-          cache: 'yarn'
+          cache: "yarn"
           cache-dependency-path: yarn.lock
       - uses: actions-rs/toolchain@v1
         name: Setup Rust
         with:
           toolchain: stable
+      - uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            target
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
       - name: Install dependencies (ubuntu only)
         if: matrix.platform == 'ubuntu-latest'
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libappindicator3-dev librsvg2-dev patchelf
-      - run: yarn && yarn build:app-desktop:vue && yarn lint && yarn test
+      - run: |
+          cargo install cargo-sort
+          yarn
+          yarn build:app-desktop:vue
+          yarn lint && yarn test
         name: Lint and test
       - run: yarn build
         name: Build release
