--- a/packages/app-desktop/src-tauri/Cargo.toml
+++ b/packages/app-desktop/src-tauri/Cargo.toml
@@ -9,20 +9,21 @@ edition = "2021"
 tauri-build = { version = "1.0.4", features = [] }
 
 [dependencies]
+anyhow = "1.0.64"
 backend-shared = { path = "../../backend-shared" }
-log = "0.4.17"
+dotenv = "0.15.0"
 env_logger = "0.9.0"
-anyhow = "1.0.63"
-tokio = { version = "1.21.0", features = ["rt", "macros"] }
+log = "0.4.17"
 sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
-serde_json = "1.0.85"
 serde = { version = "1.0.144", features = ["derive"] }
+serde_json = "1.0.85"
 tauri = { version = "1.0.5", features = ["api-all"] }
+tokio = { version = "1.21.0", features = ["rt", "macros"] }
 
 [features]
 # by default Tauri runs in production mode
 # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
-default = [ "custom-protocol" ]
+default = ["custom-protocol"]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
-custom-protocol = [ "tauri/custom-protocol" ]
+custom-protocol = ["tauri/custom-protocol"]
