--- a/packages/backend-shared/Cargo.toml
+++ b/packages/backend-shared/Cargo.toml
@@ -6,20 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.64"
+async-trait = "0.1.57"
+base64 = "0.13.0"
+chrono = { version = "0.4.22", features = [ "serde" ] }
+dotenv = "0.15.0"
+env_logger = "0.9.0"
 futures = "0.3.24"
 log = "0.4.17"
-env_logger = "0.9.0"
-anyhow = "1.0.63"
-tokio = { version = "1.21.0", features = ["rt", "macros"] }
+rust_decimal = "1.26.1"
+rust_decimal_macros = "1.26.1"
 sea-orm = { version = "0.9.2", features = [ "macros" ] }
 serde = { version = "1.0.144", features = ["derive"] }
 serde_json = "1.0.85"
-chrono = { version = "0.4.22", features = [ "serde" ] }
-rust_decimal = "1.26.1"
-rust_decimal_macros = "1.26.1"
-async-trait = "0.1.57"
-base64 = "0.13.0"
+tokio = { version = "1.21.0", features = ["rt", "macros"] }
+uuid = { version = "1.1.2", features = ["serde", "v4"] }
 
 [dev-dependencies]
-sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 migration = { path = "../migration" }
+sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
