--- a/packages/endpoint-graphql/Cargo.toml
+++ b/packages/endpoint-graphql/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.64"
 backend-shared = { path = "../backend-shared" }
-log = "0.4.17"
+dotenv = "0.15.0"
 env_logger = "0.9.0"
-anyhow = "1.0.63"
-tokio = { version = "1.21.0", features = ["rt", "macros"] }
+log = "0.4.17"
 sea-orm = { version = "0.9.2", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
+tokio = { version = "1.21.0", features = ["rt", "macros"] }
