--- a/packages/migration/Cargo.toml
+++ b/packages/migration/Cargo.toml
@@ -9,9 +9,22 @@ name = "migration"
 path = "src/lib.rs"
 
 [dependencies]
+anyhow = "1.0.65"
 backend-shared = { path = "../backend-shared" }
-tokio = { version = "1.21.0", features = ["rt", "macros"] }
+chrono = { version = "0.4.22", features = [ "serde" ] }
+dotenv = "0.15.0"
+env_logger = "0.9.1"
+
+fake = { version = "2.5", features = ['chrono', 'uuid', 'rust_decimal'] }
+log = "0.4.17"
+rand = "0.8"
+rust_decimal = "1.26.1"
+tokio = { version = "1.21.1", features = ["rt", "macros"] }
+uuid = { version = "1.1.2", features = ["serde", "v4"] }
 
 [dependencies.sea-orm-migration]
 version = "0.9.2"
 features = ["sqlx-sqlite", "runtime-tokio-rustls"]
+
+[dev-dependencies]
+tokio = { version = "1.21.1", features = ["rt", "macros"] }
