--- a/packages/backend-shared/Cargo.toml
+++ b/packages/backend-shared/Cargo.toml
@@ -5,22 +5,26 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-anyhow = "1.0.65"
-async-trait = "0.1.57"
-base64 = "0.13.0"
-chrono = { version = "0.4.22", features = [ "serde" ] }
-dotenv = "0.15.0"
-env_logger = "0.9.1"
-futures = "0.3.24"
-log = "0.4.17"
-rust_decimal = "1.26.1"
-rust_decimal_macros = "1.26.1"
-sea-orm = { version = "0.9.2", features = [ "macros" ] }
-serde = { version = "1.0.145", features = ["derive"] }
-serde_json = "1.0.85"
-tokio = { version = "1.21.2", features = ["rt", "macros"] }
-uuid = { version = "1.1.2", features = ["serde", "v4"] }
+anyhow = "1.0"
+async-trait = "0.1"
+base64 = "0.13"
+chrono = { version = "0.4", features = [ "serde" ] }
+dotenv = "0.15"
+env_logger = "0.9"
+futures = "0.3"
+itertools = "0.10"
+log = "0.4"
+rust_decimal = "1.26"
+rust_decimal_macros = "1.26"
+sea-orm = { version = "0.9", features = [ "macros" ] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+strum = "0.24"
+strum_macros = "0.24"
+thiserror = "1.0"
+tokio = { version = "1.21", features = ["rt", "macros"] }
+uuid = { version = "1.1", features = ["serde", "v4"] }
 
 [dev-dependencies]
 migration = { path = "../migration" }
-sea-orm = { version = "0.9.2", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+sea-orm = { version = "0.9", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
