--- a/packages/backend-shared/Cargo.toml
+++ b/packages/backend-shared/Cargo.toml
@@ -26,5 +26,5 @@ tokio = { version = "1.21", features = ["rt", "macros"] }
 uuid = { version = "1.1", features = ["serde", "v4"] }
 
 [dev-dependencies]
-migration = { path = "../migration" }
+backend-test = { path = "../backend-test" }
 sea-orm = { version = "0.9", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
