--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -3,3 +3,4 @@
 # https://rust-lang.github.io/rustup/concepts/profiles.html
 profile = "default"
 channel = "stable"
+components = ["llvm-tools-preview"]
