--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "build:endpoint-graphql": "cargo build -p endpoint-graphql --bin endpoint-graphql --release",
     "build:app-desktop": "yarn workspace @white-rabbit/app-desktop run build",
     "build:app-desktop:vue": "yarn workspace @white-rabbit/app-desktop run build:vue",
-    "test": "rimraf target/debug/coverage; yarn test:test && yarn test:coverage -t html -o target/debug/coverage/ && yarn test:coverage -t lcov -o target/debug/coverage/lcov.info && yarn test:clean",
-    "test:test": "RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='coverage-%p-%m.profraw' cargo test",
-    "test:coverage": "grcov . -s . --binary-path target/debug/ --branch --ignore-not-existing",
-    "test:clean": "rimraf *.profraw; rimraf packages/**/*.profraw",
+    "test": "cargo test",
+    "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info && yarn test:coverage:clean",
+    "test:coverage:test": "RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='coverage-%p-%m.profraw' cargo test",
+    "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --ignore-not-existing --ignore '/*' --ignore 'C:/*'",
+    "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw",
     "lint": "cargo fmt --check && cargo clippy",
     "lint:fix": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
     "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned"
