--- a/package.json
+++ b/package.json
@@ -20,22 +20,74 @@
     "test:coverage:test": "RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='coverage-%p-%m.profraw' cargo test",
     "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --ignore-not-existing --ignore '/*' --ignore 'C:/*'",
     "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw",
-    "lint": "cargo fmt --check && cargo clippy",
-    "lint:fix": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
+    "lint": "yarn lint:rs && yarn lint:vue",
+    "lint:rs": "cargo fmt --check && cargo clippy",
+    "lint:vue": "yarn lint:vue:eslint && yarn lint:vue:style && yarn lint:vue:prettier",
+    "lint:vue:style": "stylelint \"**/*.{vue,scss,css}\"",
+    "lint:vue:prettier": "prettier --no-config --check \"{**/*,*}.{js,ts,jsx,tsx,vue,json}\"",
+    "lint:vue:eslint": "eslint .eslintrc.js commitlint.config.js",
+    "lint:fix": "yarn lint:fix:rs && yarn lint:fix:vue",
+    "lint:fix:rs": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
+    "lint:fix:vue": "yarn lint:vue:eslint --fix && yarn lint:vue:prettier --write && yarn lint:vue:style --fix",
     "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@types/eslint": "^8.4.6",
+    "@types/node": "^18.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "^5.38.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.2",
+    "@vue/test-utils": "^2.1.0",
+    "autoprefixer": "^10.4.12",
+    "c8": "^7.12.0",
     "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "3.3.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^23.0.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-eslint-comments": "^3.2.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.0.1",
+    "eslint-plugin-sonarjs": "^0.15.0",
+    "eslint-plugin-vue": "^9.5.1",
     "husky": "^8.0.1",
-    "rimraf": "^3.0.2"
+    "markdownlint-cli": "^0.32.2",
+    "postcss-html": "^1.5.0",
+    "prettier": "^2.7.1",
+    "rimraf": "^3.0.2",
+    "rollup-plugin-visualizer": "^5.8.2",
+    "sass": "^1.55.0",
+    "sass-loader": "^13.0.2",
+    "stylelint": "^14.13.0",
+    "stylelint-config-prettier-scss": "^0.0.1",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-selector-bem-pattern": "^2.1.1",
+    "typescript": "^4.8.4",
+    "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-vuetify": "^1.0.0-alpha.17",
+    "vue-eslint-parser": "^9.1.0"
   },
   "config": {
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "resolutions": {
+    "chokidar": "^3.5.3",
+    "glob-parent": "^6.0.2",
+    "got": "^11.8.5",
+    "minimist": "^1.2.6",
+    "trim": "^1.0.0",
+    "trim-newlines": "^3.0.1"
   }
 }
