--- a/packages/frontend-shared/package.json
+++ b/packages/frontend-shared/package.json
@@ -1,4 +1,21 @@
 {
   "name": "@white-rabbit/frontend-shared",
-  "packageManager": "yarn@3.2.3"
+  "packageManager": "yarn@3.2.3",
+  "main": "src/index.ts",
+  "scripts": {
+    "lint": "vue-tsc --noEmit && eslint . --ext .vue,.js,.ts --ignore-path ../../.eslintignore",
+    "lint:fix": "yarn lint --fix"
+  },
+  "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^28.1.1",
+    "@ag-grid-community/core": "^28.1.1",
+    "@ag-grid-community/infinite-row-model": "^28.1.1",
+    "@ag-grid-community/styles": "^28.1.1",
+    "@ag-grid-community/vue3": "^28.1.1",
+    "@ag-grid-enterprise/clipboard": "^28.1.1",
+    "@ag-grid-enterprise/core": "^28.1.1",
+    "@ag-grid-enterprise/range-selection": "^28.1.1",
+    "vue": "^3.2.40",
+    "vuetify": "^3.0.0-beta.11"
+  }
 }
