refactor(backend): unify the error structure

--- a/.dockerignore
+++ b/.dockerignore
@@ -84,7 +84,6 @@ web_modules/
 
 # dotenv environment variables file
 .env
-.env.test
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -131,3 +130,6 @@ dist
 
 ### Editor Config
 .idea/
+
+# Database
+*.sqlite
