--- a/packages/app-desktop/package.json
+++ b/packages/app-desktop/package.json
@@ -7,17 +7,22 @@
     "dev:vue": "vite",
     "build": "yarn tauri build",
     "build:vue": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "vue-tsc --noEmit && eslint . --ext .vue,.js,.ts --ignore-path ../../.eslintignore",
+    "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
+    "@tauri-apps/api": "^1.1.0",
+    "@vueuse/core": "^9.3.0",
     "@white-rabbit/frontend-shared": "workspace:^",
     "vue": "^3.2.40"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.1.1",
     "@vitejs/plugin-vue": "^3.1.2",
-    "typescript": "^4.8.4",
+    "eslint": "^8.24.0",
     "vite": "^3.1.4",
+    "vitest": "^0.23.4",
     "vue-tsc": "^0.40.13"
   }
 }
