--- a/packages/app-desktop/src-tauri/Cargo.toml
+++ b/packages/app-desktop/src-tauri/Cargo.toml
@@ -12,6 +12,7 @@ anyhow = "1.0"
 backend-shared = { path = "../../backend-shared" }
 dotenv = "0.15"
 env_logger = "0.9"
+futures = "0.3"
 log = "0.4"
 sea-orm = { version = "0.9", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 serde = { version = "1.0", features = ["derive"] }
@@ -26,3 +27,6 @@ default = ["custom-protocol"]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = ["tauri/custom-protocol"]
+
+[dev-dependencies]
+backend-test = { path = "../../backend-test" }
