--- a/packages/app-web/package.json
+++ b/packages/app-web/package.json
@@ -24,6 +24,7 @@
     "vuetify": "^3.0.0-beta.11"
   },
   "devDependencies": {
+    "eslint": "^8.24.0",
     "vite": "^3.1.4",
     "vitest": "^0.23.4",
     "vue-tsc": "^0.40.13"
