--- a/packages/app-web/tsconfig.json
+++ b/packages/app-web/tsconfig.json
@@ -1,14 +1,8 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "preserve",
     "rootDir": "src/",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "isolatedModules": true,
-    "lib": ["esnext", "dom"],
-    "outDir": "dist",
-    "types": ["vite/client"]
+    "outDir": "dist"
   },
   "vueCompilerOptions": {
     "experimentalDisableTemplateSupport": true
