--- a/packages/frontend-shared/tsconfig.json
+++ b/packages/frontend-shared/tsconfig.json
@@ -1,13 +1,7 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "isolatedModules": true,
-    "lib": ["esnext", "dom"],
-    "outDir": "dist",
-    "types": ["vite/client"]
+    "outDir": "dist"
     //    "compilerOptions": {
     //      "paths": {
     //        "@/*": ["./src/*"]
