feat(frontend): add record table and the related tauri interfaces

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "lint:rs": "cargo fmt --check && cargo clippy",
     "lint:vue": "yarn lint:vue:eslint && yarn lint:vue:style && yarn lint:vue:prettier",
     "lint:vue:style": "stylelint \"**/*.{vue,scss,css}\"",
-    "lint:vue:prettier": "prettier --no-config --check \"{**/*,*}.{js,ts,jsx,tsx,vue,json}\"",
+    "lint:vue:prettier": "prettier --no-config --check \"{**/*,*}.{js,cjs,ts,jsx,tsx,vue,json}\"",
     "lint:vue:eslint": "eslint .eslintrc.js commitlint.config.js",
     "lint:fix": "yarn lint:fix:rs && yarn lint:fix:vue",
     "lint:fix:rs": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
@@ -35,15 +35,16 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@types/eslint": "^8.4.6",
-    "@types/node": "^18.8.1",
+    "@types/node": "^18.8.2",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
+    "@vitest/coverage-c8": "^0.23.4",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.1.0",
     "autoprefixer": "^10.4.12",
-    "c8": "^7.12.0",
     "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "3.3.0",
@@ -61,6 +62,7 @@
     "eslint-plugin-vue": "^9.6.0",
     "husky": "^8.0.1",
     "markdownlint-cli": "^0.32.2",
+    "postcss": "^8.4.17",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
@@ -71,7 +73,7 @@
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "stylelint-selector-bem-pattern": "^2.1.1",
+    "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vuetify": "^1.0.0-alpha.17",
