--- a/packages/app-desktop/tsconfig.json
+++ b/packages/app-desktop/tsconfig.json
@@ -1,20 +1,16 @@
 {
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
-    "jsx": "preserve",
-    "rootDir": "src/",
-    "useDefineForClassFields": true,
-    "module": "ESNext",
-    "isolatedModules": true,
-    "lib": ["esnext", "dom"],
-    "outDir": "dist",
-    "types": ["vite/client"]
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@shared/*": ["../frontend-shared/src/*"]
+    }
   },
   "vueCompilerOptions": {
     "experimentalDisableTemplateSupport": true
   },
-  "include": ["src/"],
-  "exclude": ["src/**/*.spec.ts"],
+  "exclude": ["dist", "src/**/*.spec.ts", "**/*.js"],
   "references": [
     {
       "path": "./tsconfig.dev.json"
