feat(frontend): writable record table

--- a/package.json
+++ b/package.json
@@ -20,15 +20,17 @@
     "test:coverage:test": "RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='coverage-%p-%m.profraw' cargo test",
     "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --ignore-not-existing --ignore '/*' --ignore 'C:/*'",
     "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw",
-    "lint": "yarn lint:rs && yarn lint:vue",
+    "lint": "yarn lint:rs && yarn lint:workspaces && yarn lint:js",
     "lint:rs": "cargo fmt --check && cargo clippy",
-    "lint:vue": "yarn lint:vue:eslint && yarn lint:vue:style && yarn lint:vue:prettier",
-    "lint:vue:style": "stylelint \"**/*.{vue,scss,css}\"",
-    "lint:vue:prettier": "prettier --no-config --check \"{**/*,*}.{js,cjs,ts,jsx,tsx,vue,json}\"",
-    "lint:vue:eslint": "eslint .eslintrc.js commitlint.config.js",
-    "lint:fix": "yarn lint:fix:rs && yarn lint:fix:vue",
+    "lint:workspaces": "yarn workspaces foreach -pit --include '@white-rabbit/*' run lint",
+    "lint:js": "yarn lint:js:eslint && yarn lint:js:style && yarn lint:js:prettier",
+    "lint:js:style": "stylelint \"packages/**/*.{vue,scss,css}\"",
+    "lint:js:prettier": "prettier --no-config --check \"{packages/**/*,*}.{js,cjs,ts,jsx,tsx,vue,json}\"",
+    "lint:js:eslint": "eslint . --ext .js,.cjs,.json",
+    "lint:fix": "yarn lint:fix:rs && yarn lint:fix:workspaces && yarn lint:fix:js",
     "lint:fix:rs": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
-    "lint:fix:vue": "yarn lint:vue:eslint --fix && yarn lint:vue:prettier --write && yarn lint:vue:style --fix",
+    "lint:fix:workspaces": "yarn workspaces foreach -pit --include '@white-rabbit/*' run lint:fix",
+    "lint:fix:js": "yarn lint:js:eslint --fix && yarn lint:js:prettier --write && yarn lint:js:style --fix",
     "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned"
   },
   "devDependencies": {
@@ -37,10 +39,10 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/eslint": "^8.4.6",
-    "@types/node": "^18.8.2",
+    "@types/node": "^18.8.3",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "@typescript-eslint/parser": "^5.39.0",
-    "@vitest/coverage-c8": "^0.23.4",
+    "@vitest/coverage-c8": "^0.24.0",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.1.0",
@@ -48,7 +50,7 @@
     "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.24.0",
+    "eslint": "^8.25.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -68,7 +70,7 @@
     "rimraf": "^3.0.2",
     "rollup-plugin-visualizer": "^5.8.2",
     "sass": "^1.55.0",
-    "sass-loader": "^13.0.2",
+    "sass-loader": "^13.1.0",
     "stylelint": "^14.13.0",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard-scss": "^5.0.0",
