--- a/packages/frontend-shared/package.json
+++ b/packages/frontend-shared/package.json
@@ -17,8 +17,15 @@
     "@ag-grid-enterprise/core": "^28.2.0",
     "@ag-grid-enterprise/menu": "^28.2.0",
     "@ag-grid-enterprise/range-selection": "^28.2.0",
+    "@ag-grid-enterprise/rich-select": "^28.2.0",
     "@ag-grid-enterprise/row-grouping": "^28.2.0",
+    "date-fns": "^2.29.3",
+    "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.40",
     "vuetify": "^3.0.0-beta.13"
+  },
+  "devDependencies": {
+    "eslint": "^8.25.0",
+    "vue-tsc": "^1.0.0"
   }
 }
