--- a/packages/migration/Cargo.toml
+++ b/packages/migration/Cargo.toml
@@ -15,12 +15,12 @@ chrono = { version = "0.4", features = [ "serde" ] }
 dotenv = "0.15"
 env_logger = "0.9"
 
-fake = { version = "2.5", features = ['chrono', 'uuid', 'rust_decimal'] }
+fake = { version = "2.5", features = ['chrono', 'rust_decimal'] }
 log = "0.4"
 rand = "0.8"
 rust_decimal = "1.26"
 tokio = { version = "1.21", features = ["rt", "macros"] }
-uuid = { version = "1.1", features = ["serde", "v4"] }
+uuid = { version = "1.2", features = ["serde", "v4"] }
 
 [dependencies.sea-orm-migration]
 version = "0.9"
