--- a/packages/app-desktop/src-tauri/Cargo.toml
+++ b/packages/app-desktop/src-tauri/Cargo.toml
@@ -14,6 +14,7 @@ dotenv = "0.15"
 env_logger = "0.9"
 futures = "0.3"
 log = "0.4"
+paste = "1.0"
 sea-orm = { version = "0.9", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
