feat(frontend): add row definitions

--- a/renovate.json
+++ b/renovate.json
@@ -1,4 +1,4 @@
 {
-  "extends": ["config:base", ":preserveSemverRanges", "schedule:earlyMondays"],
+  "extends": ["config:base", ":preserveSemverRanges", "schedule:daily"],
   "semanticCommits": "enabled"
 }
