--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -11,17 +11,12 @@ jobs:
         platform: [macos-latest, ubuntu-latest, windows-latest]
     steps:
       - uses: actions/checkout@v3
-        name: Checkout repository
       - uses: actions/setup-node@v3
-        name: Setup Node
         with:
           node-version: 18
           cache: "yarn"
           cache-dependency-path: yarn.lock
-      - uses: actions-rs/toolchain@v1
-        name: Setup Rust
-        with:
-          toolchain: stable
+      - uses: dtolnay/rust-toolchain@stable
       - uses: actions/cache@v3
         with:
           path: |
