--- a/package.json
+++ b/package.json
@@ -39,10 +39,10 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/eslint": "^8.4.6",
-    "@types/node": "^18.8.3",
-    "@typescript-eslint/eslint-plugin": "^5.39.0",
-    "@typescript-eslint/parser": "^5.39.0",
-    "@vitest/coverage-c8": "^0.24.0",
+    "@types/node": "^18.8.5",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "@vitest/coverage-c8": "^0.24.1",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.1.0",
@@ -59,12 +59,12 @@
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.0.1",
-    "eslint-plugin-sonarjs": "^0.15.0",
+    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-sonarjs": "^0.16.0",
     "eslint-plugin-vue": "^9.6.0",
     "husky": "^8.0.1",
     "markdownlint-cli": "^0.32.2",
-    "postcss": "^8.4.17",
+    "postcss": "^8.4.18",
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
@@ -78,7 +78,7 @@
     "tailwindcss": "^3.1.8",
     "typescript": "^4.8.4",
     "vite-plugin-compression": "^0.5.1",
-    "vite-plugin-vuetify": "^1.0.0-alpha.17",
+    "vite-plugin-vuetify": "^1.0.0",
     "vue-eslint-parser": "^9.1.0"
   },
   "config": {
