--- a/package.json
+++ b/package.json
@@ -37,12 +37,13 @@
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
+    "@mdi/js": "^7.0.96",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@types/eslint": "^8.4.6",
-    "@types/node": "^18.8.5",
+    "@types/node": "^18.11.0",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
-    "@vitest/coverage-c8": "^0.24.1",
+    "@vitest/coverage-c8": "^0.24.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
     "@vue/test-utils": "^2.1.0",
@@ -68,10 +69,10 @@
     "postcss-html": "^1.5.0",
     "prettier": "^2.7.1",
     "rimraf": "^3.0.2",
-    "rollup-plugin-visualizer": "^5.8.2",
+    "rollup-plugin-visualizer": "^5.8.3",
     "sass": "^1.55.0",
     "sass-loader": "^13.1.0",
-    "stylelint": "^14.13.0",
+    "stylelint": "^14.14.0",
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
