feat(frontend): error validation when editing

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test": "cargo test",
     "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info && yarn test:coverage:clean",
     "test:coverage:test": "RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='coverage-%p-%m.profraw' cargo test",
-    "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --ignore-not-existing --ignore '/*' --ignore 'C:/*'",
+    "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --keep-only 'packages/*'",
     "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw",
     "lint": "yarn lint:rs && yarn lint:workspaces && yarn lint:js",
     "lint:rs": "cargo fmt --check && cargo clippy",
@@ -39,19 +39,19 @@
     "@intlify/vite-plugin-vue-i18n": "^6.0.3",
     "@mdi/js": "^7.0.96",
     "@tailwindcss/line-clamp": "^0.4.2",
-    "@types/eslint": "^8.4.6",
-    "@types/node": "^18.11.0",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@types/eslint": "^8.4.7",
+    "@types/node": "^18.11.4",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "@vitest/coverage-c8": "^0.24.3",
     "@vue/eslint-config-prettier": "^7.0.0",
     "@vue/eslint-config-typescript": "^11.0.2",
-    "@vue/test-utils": "^2.1.0",
+    "@vue/test-utils": "^2.2.0",
     "autoprefixer": "^10.4.12",
     "commitizen": "^4.2.5",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "3.3.0",
-    "eslint": "^8.25.0",
+    "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^23.0.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -60,7 +60,7 @@
     "eslint-plugin-n": "^15.3.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-promise": "^6.1.0",
+    "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-sonarjs": "^0.16.0",
     "eslint-plugin-vue": "^9.6.0",
     "husky": "^8.0.1",
@@ -76,7 +76,7 @@
     "stylelint-config-prettier-scss": "^0.0.1",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-config-standard-vue": "^1.0.0",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4",
     "vite-plugin-compression": "^0.5.1",
     "vite-plugin-vuetify": "^1.0.0",
