--- a/packages/frontend-shared/package.json
+++ b/packages/frontend-shared/package.json
@@ -20,14 +20,15 @@
     "@ag-grid-enterprise/rich-select": "^28.2.0",
     "@ag-grid-enterprise/row-grouping": "^28.2.0",
     "date-fns": "^2.29.3",
+    "lodash": "^4.17.21",
     "object-hash": "^3.0.0",
     "v-calendar": "^3.0.0-alpha.8",
     "vue": "^3.2.41",
-    "vuetify": "^3.0.0-beta.13"
+    "vuetify": "^3.0.0-beta.14"
   },
   "devDependencies": {
     "@types/object-hash": "^2.2.1",
-    "eslint": "^8.25.0",
-    "vue-tsc": "^1.0.8"
+    "eslint": "^8.26.0",
+    "vue-tsc": "^1.0.9"
   }
 }
