--- a/packages/app-web/package.json
+++ b/packages/app-web/package.json
@@ -11,22 +11,22 @@
     "lint:fix": "yarn lint --fix"
   },
   "dependencies": {
-    "@ag-grid-community/client-side-row-model": "^28.2.0",
-    "@ag-grid-community/core": "^28.2.0",
-    "@ag-grid-community/infinite-row-model": "^28.2.0",
-    "@ag-grid-community/styles": "^28.2.0",
-    "@ag-grid-community/vue3": "^28.2.0",
-    "@ag-grid-enterprise/clipboard": "^28.2.0",
-    "@ag-grid-enterprise/core": "^28.2.0",
-    "@ag-grid-enterprise/range-selection": "^28.2.0",
+    "@ag-grid-community/client-side-row-model": "^28.2.1",
+    "@ag-grid-community/core": "^28.2.1",
+    "@ag-grid-community/infinite-row-model": "^28.2.1",
+    "@ag-grid-community/styles": "^28.2.1",
+    "@ag-grid-community/vue3": "^28.2.1",
+    "@ag-grid-enterprise/clipboard": "^28.2.1",
+    "@ag-grid-enterprise/core": "^28.2.1",
+    "@ag-grid-enterprise/range-selection": "^28.2.1",
     "@white-rabbit/frontend-shared": "workspace:^",
     "vue": "^3.2.41",
-    "vuetify": "^3.0.0-beta.13"
+    "vuetify": "^3.0.0"
   },
   "devDependencies": {
-    "eslint": "^8.25.0",
-    "vite": "^3.1.8",
-    "vitest": "^0.24.3",
-    "vue-tsc": "^1.0.8"
+    "eslint": "^8.26.0",
+    "vite": "^3.2.2",
+    "vitest": "^0.24.5",
+    "vue-tsc": "^1.0.9"
   }
 }
