feat: add the basic repository abstraction

--- a/packages/frontend-core/tsconfig.json
+++ b/packages/frontend-core/tsconfig.json
@@ -7,7 +7,7 @@
     "rootDir": "src",
     "outDir": "dist",
     "paths": {
-      "@/*": ["./src/*"]
+      "@core/*": ["../frontend-core/src/*"]
     }
   },
   "references": [
