--- a/packages/app-desktop/package.json
+++ b/packages/app-desktop/package.json
@@ -1,6 +1,8 @@
 {
   "name": "@test-rust/app-desktop",
   "packageManager": "yarn@3.5.1",
+  "type": "module",
+  "version": "0.1.0",
   "scripts": {
     "dev": "yarn tauri dev",
     "dev:vue": "vite",
@@ -12,11 +14,11 @@
     "clean": "rimraf dist/ node_modules"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.3",
+    "@quasar/extras": "^1.16.4",
     "@tauri-apps/api": "^1.3.0",
     "@test-rust/frontend-core": "workspace:^",
     "@vueuse/core": "^10.1.2",
-    "pinia": "^2.0.36",
+    "pinia": "^2.1.1",
     "quasar": "^2.12.0",
     "tailwindcss": "^3.3.2",
     "uuid": "^9.0.0",
@@ -28,8 +30,8 @@
     "@tauri-apps/cli": "^1.3.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.40.0",
-    "vite": "^4.3.5",
-    "vitest": "^0.31.0",
-    "vue-tsc": "^1.7.1"
+    "vite": "^4.3.7",
+    "vitest": "^0.31.1",
+    "vue-tsc": "^1.7.3"
   }
 }
