--- a/packages/app-desktop/src-tauri/Cargo.toml
+++ b/packages/app-desktop/src-tauri/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
+
 anyhow = "1.0"
 backend-core = { path = "../../backend-core" }
 dotenv = "0.15"
@@ -15,7 +16,7 @@ env_logger = "0.10"
 futures = "0.3"
 log = "0.4"
 paste = "1.0"
-sea-orm = { version = "0.11.3", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 tauri = { version = "1.3", features = ["api-all"] }
@@ -29,3 +30,6 @@ default = ["custom-protocol"]
 # this feature is used used for production builds where `devPath` points to the filesystem
 # DO NOT remove this
 custom-protocol = ["tauri/custom-protocol"]
+
+[dev-dependencies]
+migration = { path = "../../migration" }
