--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,6 +1,8 @@
+edition = "2021"
+version = "Two"
+use_small_heuristics = "Max"
 max_width = 120
 tab_spaces = 2
-edition = "2021"
 newline_style = "Unix"
 use_try_shorthand = true
 use_field_init_shorthand = true
