feat: orm need to enable the max connection count manually, nested transaction not working in stream

--- a/packages/migration/Cargo.toml
+++ b/packages/migration/Cargo.toml
@@ -11,6 +11,7 @@ path = "src/lib.rs"
 [dependencies]
 async-trait = "0.1"
 backend-core = { path = "../backend-core" }
+rand = "*"
 tokio = { version = "1.28", features = ["rt", "macros"] }
 
 [dependencies.sea-orm-migration]
