--- a/packages/app-desktop/package.json
+++ b/packages/app-desktop/package.json
@@ -11,27 +11,18 @@
     "build": "yarn tauri build",
     "build:vue": "yarn clean && vue-tsc --noEmit && vite build",
     "preview": "vite preview",
-    "clean": "rimraf dist/ node_modules"
+    "clean": "rimraf dist/ node_modules/"
   },
   "dependencies": {
-    "@quasar/extras": "^1.16.4",
     "@tauri-apps/api": "^1.3.0",
-    "@test-rust/frontend-core": "workspace:^",
-    "@vueuse/core": "^10.1.2",
-    "pinia": "^2.1.3",
-    "quasar": "^2.12.0",
-    "tailwindcss": "^3.3.2",
-    "uuid": "^9.0.0",
-    "vue": "^3.3.4",
-    "vue-i18n": "^9.2.2",
-    "vue-router": "^4.2.2"
+    "@test-rust/frontend-core": "workspace:^"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.3.1",
     "@vitejs/plugin-vue": "^4.2.3",
     "eslint": "^8.41.0",
     "vite": "^4.3.9",
-    "vitest": "^0.31.1",
+    "vitest": "^0.31.4",
     "vue-tsc": "^1.7.8"
   }
 }
