--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -6,17 +6,37 @@
   "scripts": {
     "test": "vitest run --coverage",
     "lint:tsc": "vue-tsc --noEmit",
-    "clean": "rimraf types/ dist/ tsconfig.tsbuildinfo"
+    "clean": "rimraf dist/"
   },
-  "peerDependencies": {
-    "@quasar/extras": "*",
-    "pinia": "*",
-    "quasar": "*",
-    "tailwindcss": "*",
-    "uuid": "*",
-    "vue": "*",
-    "vue-i18n": "*",
-    "vue-router": "*"
+  "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^29.3.5",
+    "@ag-grid-community/core": "^29.3.5",
+    "@ag-grid-community/styles": "^29.3.5",
+    "@ag-grid-community/vue3": "^29.3.5",
+    "@ag-grid-enterprise/charts": "^29.3.5",
+    "@ag-grid-enterprise/clipboard": "^29.3.5",
+    "@ag-grid-enterprise/column-tool-panel": "^29.3.5",
+    "@ag-grid-enterprise/core": "^29.3.5",
+    "@ag-grid-enterprise/excel-export": "^29.3.5",
+    "@ag-grid-enterprise/filter-tool-panel": "^29.3.5",
+    "@ag-grid-enterprise/menu": "^29.3.5",
+    "@ag-grid-enterprise/multi-filter": "^29.3.5",
+    "@ag-grid-enterprise/range-selection": "^29.3.5",
+    "@ag-grid-enterprise/rich-select": "^29.3.5",
+    "@ag-grid-enterprise/row-grouping": "^29.3.5",
+    "@ag-grid-enterprise/set-filter": "^29.3.5",
+    "@ag-grid-enterprise/side-bar": "^29.3.5",
+    "@ag-grid-enterprise/status-bar": "^29.3.5",
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@quasar/extras": "^1.16.4",
+    "@vueuse/core": "^10.1.2",
+    "pinia": "^2.1.3",
+    "quasar": "^2.12.0",
+    "tailwindcss": "^3.3.2",
+    "uuid": "^9.0.0",
+    "vue": "^3.3.4",
+    "vue-i18n": "^9.2.2",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "rimraf": "^5.0.1",
