feat: add record entity

--- a/packages/migration/Cargo.toml
+++ b/packages/migration/Cargo.toml
@@ -11,7 +11,9 @@ path = "src/lib.rs"
 [dependencies]
 async-trait = "0.1"
 backend-core = { path = "../backend-core" }
+chrono = { version = "0.4", features = [ "serde" ] }
 rand = "*"
+rust_decimal = "1.29"
 tokio = { version = "1.28", features = ["rt", "macros"] }
 
 [dependencies.sea-orm-migration]
