--- a/packages/app-desktop/src-tauri/Cargo.toml
+++ b/packages/app-desktop/src-tauri/Cargo.toml
@@ -8,8 +8,9 @@ edition = "2021"
 tauri-build = { version = "1.3", features = [] }
 
 [dependencies]
-
 anyhow = "1.0"
+
+async-trait = "0.1"
 backend-core = { path = "../../backend-core" }
 dotenv = "0.15"
 env_logger = "0.10"
@@ -33,3 +34,4 @@ custom-protocol = ["tauri/custom-protocol"]
 
 [dev-dependencies]
 migration = { path = "../../migration" }
+test-suite = { path = "../../test-suite" }
