--- a/packages/backend-core/Cargo.toml
+++ b/packages/backend-core/Cargo.toml
@@ -25,3 +25,4 @@ uuid = { version = "1.3", features = ["serde", "v4"] }
 
 [dev-dependencies]
 sea-orm = { version = "0.11", features = [ "sqlx-sqlite", "runtime-tokio-rustls", "macros" ] }
+test-suite = { path = "../test-suite" }
