--- a/packages/app-desktop/package.json
+++ b/packages/app-desktop/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@test-rust/app-desktop",
-  "packageManager": "yarn@3.5.1",
+  "name": "@white-rabbit/app-desktop",
+  "packageManager": "yarn@3.6.0",
   "type": "module",
   "version": "0.1.0",
   "scripts": {
@@ -15,14 +15,14 @@
   },
   "dependencies": {
     "@tauri-apps/api": "^1.3.0",
-    "@test-rust/frontend-core": "workspace:^"
+    "@white-rabbit/frontend-core": "workspace:^"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.3.1",
     "@vitejs/plugin-vue": "^4.2.3",
-    "eslint": "^8.42.0",
+    "rimraf": "^5.0.1",
     "vite": "^4.3.9",
-    "vitest": "^0.31.4",
-    "vue-tsc": "^1.7.8"
+    "vitest": "^0.32.0",
+    "vue-tsc": "^1.7.11"
   }
 }
