--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@test-rust/frontend-core",
-  "packageManager": "yarn@3.5.1",
+  "name": "@white-rabbit/frontend-core",
+  "packageManager": "yarn@3.6.0",
   "type": "module",
   "version": "0.1.0",
   "scripts": {
@@ -9,24 +9,24 @@
     "clean": "rimraf dist/"
   },
   "dependencies": {
-    "@ag-grid-community/client-side-row-model": "^29.3.5",
-    "@ag-grid-community/core": "^29.3.5",
-    "@ag-grid-community/styles": "^29.3.5",
-    "@ag-grid-community/vue3": "^29.3.5",
-    "@ag-grid-enterprise/charts": "^29.3.5",
-    "@ag-grid-enterprise/clipboard": "^29.3.5",
-    "@ag-grid-enterprise/column-tool-panel": "^29.3.5",
-    "@ag-grid-enterprise/core": "^29.3.5",
-    "@ag-grid-enterprise/excel-export": "^29.3.5",
-    "@ag-grid-enterprise/filter-tool-panel": "^29.3.5",
-    "@ag-grid-enterprise/menu": "^29.3.5",
-    "@ag-grid-enterprise/multi-filter": "^29.3.5",
-    "@ag-grid-enterprise/range-selection": "^29.3.5",
-    "@ag-grid-enterprise/rich-select": "^29.3.5",
-    "@ag-grid-enterprise/row-grouping": "^29.3.5",
-    "@ag-grid-enterprise/set-filter": "^29.3.5",
-    "@ag-grid-enterprise/side-bar": "^29.3.5",
-    "@ag-grid-enterprise/status-bar": "^29.3.5",
+    "@ag-grid-community/client-side-row-model": "^30.0.0",
+    "@ag-grid-community/core": "^30.0.0",
+    "@ag-grid-community/styles": "^30.0.0",
+    "@ag-grid-community/vue3": "^30.0.0",
+    "@ag-grid-enterprise/charts": "^30.0.0",
+    "@ag-grid-enterprise/clipboard": "^30.0.0",
+    "@ag-grid-enterprise/column-tool-panel": "^30.0.0",
+    "@ag-grid-enterprise/core": "^30.0.0",
+    "@ag-grid-enterprise/excel-export": "^30.0.0",
+    "@ag-grid-enterprise/filter-tool-panel": "^30.0.0",
+    "@ag-grid-enterprise/menu": "^30.0.0",
+    "@ag-grid-enterprise/multi-filter": "^30.0.0",
+    "@ag-grid-enterprise/range-selection": "^30.0.0",
+    "@ag-grid-enterprise/rich-select": "^30.0.0",
+    "@ag-grid-enterprise/row-grouping": "^30.0.0",
+    "@ag-grid-enterprise/set-filter": "^30.0.0",
+    "@ag-grid-enterprise/side-bar": "^30.0.0",
+    "@ag-grid-enterprise/status-bar": "^30.0.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@quasar/extras": "^1.16.4",
     "@vueuse/core": "^10.1.2",
@@ -41,6 +41,7 @@
   "devDependencies": {
     "rimraf": "^5.0.1",
     "vite": "^4.3.9",
-    "vue-tsc": "^1.7.8"
+    "vitest": "^0.32.0",
+    "vue-tsc": "^1.7.11"
   }
 }
