--- a/packages/test-suite/Cargo.toml
+++ b/packages/test-suite/Cargo.toml
@@ -11,8 +11,12 @@ backend-core = { path = "../backend-core" }
 chrono = { version = "0.4", features = [ "serde" ] }
 dotenv = "0.15"
 env_logger = "0.10"
+fake = { version = "2.6", features = ["bigdecimal"] }
 futures = "0.3"
+itertools = "0.10"
+log = "0.4"
 migration = { path = "../migration" }
 rand = "0.8"
 rust_decimal = "1.29"
 tokio = { version = "1.28", features = ["rt", "macros"] }
+uuid = { version = "1.3", features = ["serde", "v4"] }
