--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -27,19 +27,17 @@
     "@ag-grid-enterprise/set-filter": "^30.0.2",
     "@ag-grid-enterprise/side-bar": "^30.0.2",
     "@ag-grid-enterprise/status-bar": "^30.0.2",
-    "@fortawesome/fontawesome-free": "^6.4.0",
     "@types/uuid": "^9.0.2",
     "@vueuse/core": "^10.2.0",
     "pinia": "^2.1.4",
     "tailwindcss": "^3.3.2",
     "uuid": "^9.0.0",
     "vue": "^3.3.4",
-    "vue-i18n": "^9.2.2",
+    "vue-i18n": "next",
     "vue-router": "^4.2.2",
     "vuetify": "^3.3.5"
   },
   "devDependencies": {
-    "material-design-icons-iconfont": "^6.7.0",
     "rimraf": "^5.0.1",
     "vite": "^4.3.9",
     "vitest": "^0.32.2",
