--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -27,20 +27,21 @@
     "@ag-grid-enterprise/set-filter": "^30.0.2",
     "@ag-grid-enterprise/side-bar": "^30.0.2",
     "@ag-grid-enterprise/status-bar": "^30.0.2",
+    "@date-io/date-fns": "^2.16.0",
     "@types/uuid": "^9.0.2",
-    "@vueuse/core": "^10.2.0",
-    "pinia": "^2.1.4",
+    "@vueuse/core": "^10.2.1",
+    "date-fns": "^2.30.0",
     "tailwindcss": "^3.3.2",
     "uuid": "^9.0.0",
     "vue": "^3.3.4",
-    "vue-i18n": "next",
+    "vue-i18n": "^9.3.0-beta.20",
     "vue-router": "^4.2.2",
-    "vuetify": "^3.3.5"
+    "vuetify": "^3.3.6"
   },
   "devDependencies": {
     "rimraf": "^5.0.1",
     "vite": "^4.3.9",
     "vitest": "^0.32.2",
-    "vue-tsc": "^1.8.1"
+    "vue-tsc": "^1.8.3"
   }
 }
