feat: change ui to quasar

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@commitlint/cli": "^17.8.0",
     "@commitlint/config-conventional": "^17.8.0",
     "@intlify/unplugin-vue-i18n": "^1.4.0",
-    "@mdi/js": "^7.3.67",
+    "@quasar/vite-plugin": "^1.5.0",
     "@types/eslint": "^8.44.6",
     "@types/jsdom": "^21.1.4",
     "@types/node": "^20.8.7",
@@ -84,7 +84,6 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
-    "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.34.6",
     "vue": "^3.3.5",
     "vue-eslint-parser": "^9.3.2",
