feat: change ui to quasar

--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.8.0",
-    "@commitlint/config-conventional": "^17.8.0",
+    "@commitlint/cli": "^18.0.0",
+    "@commitlint/config-conventional": "^18.0.0",
     "@intlify/unplugin-vue-i18n": "^1.4.0",
-    "@mdi/js": "^7.3.67",
+    "@quasar/vite-plugin": "^1.5.0",
     "@types/eslint": "^8.44.6",
     "@types/jsdom": "^21.1.4",
     "@types/node": "^20.8.7",
@@ -42,23 +42,23 @@
     "@typescript-eslint/parser": "^6.8.0",
     "@vitejs/plugin-vue": "^4.4.0",
     "@vitest/coverage-v8": "^0.34.6",
-    "@vue/compiler-dom": "^3.3.5",
+    "@vue/compiler-dom": "^3.3.6",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.4.1",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.16",
     "commitizen": "^4.3.0",
-    "commitlint": "^17.8.0",
+    "commitlint": "^18.0.0",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.52.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-eslint-comments": "^3.2.0",
-    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -74,7 +74,7 @@
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "rollup-plugin-visualizer": "^5.9.2",
-    "sass": "^1.69.4",
+    "sass": "1.32.12",
     "sass-loader": "^13.3.2",
     "stylelint": "^15.11.0",
     "stylelint-config-recommended-scss": "^13.0.0",
@@ -84,9 +84,8 @@
     "tailwindcss": "^3.3.3",
     "typescript": "^5.2.2",
     "vite": "^4.5.0",
-    "vite-plugin-vuetify": "^1.0.2",
     "vitest": "^0.34.6",
-    "vue": "^3.3.5",
+    "vue": "^3.3.6",
     "vue-eslint-parser": "^9.3.2",
     "vue-tsc": "^1.8.19"
   },
