--- a/packages/frontend-core/package.json
+++ b/packages/frontend-core/package.json
@@ -28,17 +28,18 @@
     "@ag-grid-enterprise/side-bar": "^30.2.0",
     "@ag-grid-enterprise/status-bar": "^30.2.0",
     "@date-io/date-fns": "^2.17.0",
+    "@quasar/extras": "^1.16.7",
     "@vueuse/core": "^10.5.0",
     "ag-charts-community": "^8.2.0",
     "ag-charts-vue3": "^8.2.0",
     "date-fns": "^2.30.0",
+    "quasar": "^2.13.0",
     "tailwindcss": "^3.3.3",
     "uuid": "^9.0.1",
-    "vue": "^3.3.5",
+    "vue": "^3.3.6",
     "vue-class-component": "^8.0.0-rc.1",
     "vue-i18n": "^9.5.0",
-    "vue-router": "^4.2.5",
-    "vuetify": "^3.3.22"
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@types/uuid": "^9.0.6",
