--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,10 @@
   "files": [],
   "references": [
     {
-      "path": "./packages/app-desktop/tsconfig.dev.json"
+      "path": "./packages/app-desktop/tsconfig.dev.json",
     },
     {
-      "path": "./packages/frontend-core/tsconfig.dev.json"
-    }
-  ]
+      "path": "./packages/frontend-core/tsconfig.dev.json",
+    },
+  ],
 }
