--- a/packages/app-desktop/package.json
+++ b/packages/app-desktop/package.json
@@ -16,10 +16,19 @@
     "clean": "rimraf dist/ node_modules/"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.5.4"
+    "@tauri-apps/api": "^2.0.0-beta.9",
+    "@tauri-apps/plugin-clipboard-manager": "^2.1.0-beta.0",
+    "@tauri-apps/plugin-dialog": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-fs": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-global-shortcut": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-http": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-notification": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-os": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-process": "^2.0.0-beta.2",
+    "@tauri-apps/plugin-shell": "^2.0.0-beta.2"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.5.11",
+    "@tauri-apps/cli": "^2.0.0-beta.13",
     "@vitejs/plugin-vue": "^5.0.4",
     "rimraf": "^5.0.5",
     "vite": "^5.2.10",
