chore: move app-desktop to app-tauri for electron support

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "workspaces": [
     "packages/frontend-core",
-    "packages/app-desktop"
+    "packages/app-tauri"
   ],
   "scripts": {
     "postinstall": "husky",
