--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -1,6 +1,6 @@
 name: CI/CD
 
-on: [pull_request, push]
+on: [ pull_request, push ]
 
 jobs:
   check:
@@ -8,7 +8,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        platform: [macos-latest, ubuntu-latest, windows-latest]
+        platform: [ macos-latest, ubuntu-latest, windows-latest ]
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -31,7 +31,7 @@ jobs:
           sudo apt-get install -y libwebkit2gtk-4.1-dev build-essential curl wget file libssl-dev libayatana-appindicator3-dev librsvg2-dev
       - run: |
           cargo install grcov && cargo install cargo-sort
-          yarn && yarn workspace @white-rabbit/app-desktop run build:vue
+          yarn && yarn workspace @white-rabbit/app-tauri run build:vue
           yarn lint && yarn test:coverage
         name: Test and coverage
       - name: Push coverage to Codecov
