--- a/packages/app-tauri/package.json
+++ b/packages/app-tauri/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@white-rabbit/app-desktop",
+  "name": "@white-rabbit/app-tauri",
   "packageManager": "yarn@4.2.2",
   "version": "0.1.0",
   "scripts": {
