--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
   },
   "workspaces": [
     "packages/frontend-core",
-    "packages/app-tauri"
+    "packages/app-tauri",
+    "packages/app-electron"
   ],
   "scripts": {
     "postinstall": "husky",
-    "build": "yarn workspaces foreach --from 'packages/*' -Rpitv run build",
+    "build": "cargo build --release && yarn workspaces foreach --from 'packages/*' -Rpitv run build",
     "lint:rs": "cargo fmt --check && cargo clippy",
     "lint:fix:rs": "cargo sort -w && cargo fmt && cargo clippy --fix --allow-dirty --allow-staged",
     "lint:stylelint": "stylelint '**/*.{vue,scss,css}' --ignore-path .prettierignore",
@@ -33,7 +34,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
     "@commitlint/config-conventional": "^19.2.2",
-    "@eslint/js": "^9.2.0",
+    "@eslint/js": "^9.3.0",
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@quasar/vite-plugin": "^1.7.0",
     "@types/eslint": "^8.56.10",
@@ -50,12 +51,12 @@
     "commitlint": "^19.3.0",
     "cross-env": "^7.0.3",
     "cz-conventional-changelog": "^3.3.0",
-    "eslint": "^9.2.0",
+    "eslint": "^9.3.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-vue": "^9.26.0",
     "husky": "^9.0.11",
-    "jsdom": "^24.0.0",
-    "markdownlint-cli": "^0.40.0",
+    "jsdom": "^24.1.0",
+    "markdownlint-cli": "^0.41.0",
     "postcss": "^8.4.38",
     "postcss-html": "^1.7.0",
     "postcss-load-config": "^5.1.0",
@@ -64,14 +65,14 @@
     "rollup-plugin-visualizer": "^5.12.0",
     "sass": "^1.77.2",
     "sass-loader": "^14.2.1",
-    "stylelint": "^16.5.0",
+    "stylelint": "^16.6.0",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-config-standard-vue": "^1.0.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
-    "typescript-eslint": "^7.9.0",
+    "typescript-eslint": "^7.11.0",
     "vite": "^5.2.11",
     "vitest": "^1.6.0",
     "vue": "^3.4.27",
