--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,7 +1,7 @@
 sonar.organization=alices-wonderland
 sonar.projectKey=alices-wonderland_white-rabbit
 
-sonar.projectName=Alice's Wonderland White Rabbit
+sonar.projectName="Alice's Wonderland White Rabbit"
 sonar.projectVersion=0.1.0
 
 sonar.sources=packages/
