--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,6 +1,4 @@
 [toolchain]
-# The default profile includes rustc, rust-std, cargo, rust-docs, rustfmt and clippy.
-# https://rust-lang.github.io/rustup/concepts/profiles.html
-profile = "default"
+profile = "minimal"
 channel = "stable"
-components = ["llvm-tools-preview"]
+components = ["rustfmt", "clippy"]
