feat: add convert methods between grpc and core

--- a/package.json
+++ b/package.json
@@ -26,10 +26,9 @@
     "lint": "yarn lint:prettier && yarn lint:stylelint && yarn lint:rs && yarn workspaces foreach --from 'packages/*' -Rpitv run lint",
     "upgrade": "yarn upgrade-interactive && cargo update && cargo upgrade --incompatible --pinned",
     "test": "cargo test",
-    "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info && yarn test:coverage:clean",
-    "test:coverage:test": "RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='coverage-%p-%m.profraw' cargo test",
-    "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --keep-only 'packages/*'",
-    "test:coverage:clean": "rimraf *.profraw; rimraf packages/**/*.profraw"
+    "test:coverage": "rimraf target/debug/coverage; yarn test:coverage:test && yarn test:coverage:generate -t html -o target/debug/coverage/ && yarn test:coverage:generate -t lcov -o target/debug/coverage/lcov.info",
+    "test:coverage:test": "CARGO_INCREMENTAL='0' RUSTDOCFLAGS='-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests' RUSTFLAGS='-Zprofile -Ccodegen-units=1 -Cinline-threshold=0 -Clink-dead-code -Coverflow-checks=off -Cpanic=abort -Zpanic_abort_tests' cargo +nightly test",
+    "test:coverage:generate": "grcov . -s . --binary-path ./target/debug/ --branch --keep-only 'packages/*'"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.3.0",
@@ -38,10 +37,10 @@
     "@intlify/unplugin-vue-i18n": "^4.0.0",
     "@quasar/vite-plugin": "^1.7.0",
     "@types/eslint": "^8.56.10",
-    "@types/jsdom": "^21.1.6",
+    "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.17.4",
-    "@types/node": "^20.12.12",
-    "@vitejs/plugin-vue": "^5.0.4",
+    "@types/node": "^20.12.13",
+    "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/coverage-v8": "^1.6.0",
     "@vue/compiler-dom": "^3.4.27",
     "@vue/test-utils": "^2.4.6",
@@ -63,9 +62,9 @@
     "prettier": "^3.2.5",
     "rimraf": "^5.0.7",
     "rollup-plugin-visualizer": "^5.12.0",
-    "sass": "^1.77.2",
+    "sass": "^1.77.4",
     "sass-loader": "^14.2.1",
-    "stylelint": "^16.6.0",
+    "stylelint": "^16.6.1",
     "stylelint-config-recommended-scss": "^14.0.0",
     "stylelint-config-recommended-vue": "^1.5.0",
     "stylelint-config-standard-scss": "^13.1.0",
@@ -73,7 +72,7 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.11.0",
-    "vite": "^5.2.11",
+    "vite": "^5.2.12",
     "vitest": "^1.6.0",
     "vue": "^3.4.27",
     "vue-eslint-parser": "^9.4.2",
