feat: add components

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/jsdom": "^21.1.7",
     "@types/lodash": "^4.17.5",
     "@types/node": "^20.14.2",
+    "@types/uuid": "^9.0.8",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vitest/coverage-v8": "^1.6.0",
     "@vue/compiler-dom": "^3.4.27",
@@ -95,15 +96,31 @@
     "workbox-strategies": "^7.1.0"
   },
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^31.3.2",
+    "@ag-grid-community/core": "^31.3.2",
+    "@ag-grid-community/styles": "^31.3.2",
+    "@ag-grid-community/vue3": "^31.3.2",
+    "@ag-grid-enterprise/clipboard": "^31.3.2",
+    "@ag-grid-enterprise/column-tool-panel": "^31.3.2",
+    "@ag-grid-enterprise/core": "^31.3.2",
+    "@ag-grid-enterprise/filter-tool-panel": "^31.3.2",
+    "@ag-grid-enterprise/menu": "^31.3.2",
+    "@ag-grid-enterprise/multi-filter": "^31.3.2",
+    "@ag-grid-enterprise/range-selection": "^31.3.2",
+    "@ag-grid-enterprise/row-grouping": "^31.3.2",
+    "@ag-grid-enterprise/set-filter": "^31.3.2",
     "@bufbuild/protobuf": "^1.10.0",
     "@grpc/grpc-js": "^1.10.8",
     "@quasar/extras": "^1.16.11",
     "@tanstack/vue-query": "^5.41.0",
     "@vueuse/core": "^10.10.0",
+    "ag-charts-community": "^9.3.1",
+    "date-fns": "^3.6.0",
     "google-protobuf": "^3.21.2",
     "pinia": "^2.1.7",
     "quasar": "^2.16.4",
     "register-service-worker": "^1.7.2",
+    "uuid": "^9.0.1",
     "vue": "^3.4.27",
     "vue-i18n": "^9.13.1",
     "vue-router": "^4.3.2"
